<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_new_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:background="@drawable/design"
        android:orientation="horizontal"
        android:padding="45dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/back_view"
            android:layout_width="240dp"
            android:layout_height="200dp"
            android:background="@drawable/back_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tap2pay_icon"
            android:layout_width="106dp"
            android:layout_height="100dp"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/ic_baseline_tap_and_play_24"
            app:layout_constraintBottom_toBottomOf="@+id/back_view"
            app:layout_constraintEnd_toEndOf="@+id/back_view"
            app:layout_constraintStart_toStartOf="@+id/back_view"
            app:layout_constraintTop_toTopOf="@+id/back_view" />

        <View
            android:id="@+id/back_view_outline"
            android:layout_width="240dp"
            android:layout_height="200dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/back_view_outline"
            app:layout_constraintEnd_toEndOf="@id/back_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tap_txtView"
            android:layout_width="245dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tap_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/back_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/back_view"
            app:layout_constraintTop_toBottomOf="@+id/back_view" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/back_view_outline"
            android:gravity="center_vertical"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:layout_constraintEnd_toEndOf="@+id/tap_txtView"
            app:layout_constraintStart_toStartOf="@+id/tap_txtView"
            app:layout_constraintTop_toBottomOf="@+id/tap_txtView"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/process_payment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/topup_btn"
            android:text="@string/pay"
            app:layout_constraintEnd_toEndOf="@+id/back_view"
            app:layout_constraintStart_toStartOf="@+id/back_view"
            app:layout_constraintTop_toBottomOf="@+id/note" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- THE BOTTOM NAVIGATION VIEW LAYOUT -->
    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_view"
            app:menu="@menu/bottom_navigation_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>